<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">G32Glu</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_configuration">Please configure your serial port first.</string>
    <string name="error_security">You do not have read/write permission to the serial
		port.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown
		reason.</string>

    <!-- G32 -->
    <string name="title_name">Bioland</string>
    <string name="measure_glu">测血糖</string>
    <string name="hint_normal_value">血糖正常，请注意保持！</string>
    <string name="main_record">记录</string>
    <string name="main_health">健康指导</string>
    <string name="main_remind">提醒</string>
    <string name="main_more">更多</string>
    <!-- end -->


    <!-- measure -->
    <string name="measure_finish">完成测试</string>
    <!-- end -->


    <!-- record 记录 -->
    <string name="record_title">测试记录</string>
    <string name="record_time">次</string>
    <string name="record_normal">正常</string>
    <string name="record_high_side">偏高</string>
    <string name="record_low_side">偏低</string>
    <string name="record_breakfast">早餐</string>
    <string name="record_lunch">午餐</string>
    <string name="record_dinner">晚餐</string>
    <string name="record_limosis">空腹</string>
    <string name="record_before">前</string>
    <string name="record_after">后</string>
    <string name="record_sleep">睡</string>
    <string name="record_time_frame">时段</string>
    <string name="record_date">日期</string>
    <!-- end -->
    <!-- record_details 记录详情 -->
    <string name="record_details_title">记录详情</string>
    <string name="record_details_overeat">吃太饱</string>
    <string name="record_details_medicine">没吃药</string>
    <string name="record_details_wine">喝酒了</string>
    <string name="record_details_drink">喝饮料</string>
    <string name="record_details_fruit">吃水果</string>
    <string name="record_details_other">其它原因</string>
    <string name="record_details_time_hint">测试时间段 ：</string>
    <string name="record_details_time_before_breakfast">早餐前</string>
    <string name="record_details_time_before_lunch">午餐前</string>
    <string name="record_details_time_before_dinner">晚餐前</string>
    <string name="record_details_time_before_sleep">睡觉前</string>
    <string name="record_details_time_after_breakfast">早餐后</string>
    <string name="record_details_time_after_lunch">午餐后</string>
    <string name="record_details_time_after_dinner">晚餐后</string>
    <string name="record_details_value_status">本次血糖值(</string>
    <string name="record_details_value_status_high">)，请选择偏高原因：</string>
    <string name="record_details_value_status_low">)，请选择偏低原因：</string>
    <string name="record_details_value_status_normal">)，备注良好习惯：</string>
    <string name="record_details_value_status_high_reason">)，偏高原因：</string>
    <string name="record_details_value_status_low_reason">)，偏低原因：</string>
    <string name="record_details_input_reason">请输入原因</string>
    <string name="record_details_save">保存</string>
    <string name="record_details_change">修改</string>
    <!-- end -->


    <!-- remind 提醒 -->
    <string name="remind_time">提醒时间</string>
    <string name="remind_hint">您还没添加提醒</string>
    <string name="remind_add_time">添加提醒</string>
    <string name="remind_set_time">设置时间</string>
    <string name="remind_next">下一步</string>
    <string name="remind_finish">完成</string>
    <string name="remind_hour">时</string>
    <string name="remind_minute">分</string>
    <string name="remind_dialog_ok">确定</string>
    <string name="remind_dialog_cancel">取消</string>
    <string name="remind_dialog_message">确定删除该闹钟&#063;</string>

    <!-- end -->


    <!-- more 更多 -->
    <string name="more_two_dimension">我的二维码</string>
    <string name="more_wlan">WLAN</string>
    <string name="more_system">系统</string>
    <string name="more_update">软件升级</string>
    <string name="more_recover">恢复出厂设置</string>
    <string name="more_feedback">反馈</string>
    <string name="more_about">关于</string>
    <!-- end -->


    <!-- 字符定义 -->
    <string name="hint_version">软件版本:v0.01</string>
    <string name="hint_trigger">触发</string>
    <string name="hint_insert">请插入试纸</string>
    <string name="hint_staxis">请滴血测量</string>
    <string name="hint_disabled">试纸已失效</string>
    <string name="hint_glu_high">血糖值太高</string>
    <string name="hint_glu_low">血糖值太低</string>
    <string name="hint_temp_high">温度超标</string>
    <string name="hint_batt">电池电压不足</string>
    <string name="hint_start">试纸插入开机错误</string>
    <string name="hint_time">倒计时</string>
    <string name="sn">SN</string>
    <string name="temp">温度</string>
    <string name="time">时间</string>
    <string name="temp_unit">&#176;C</string>
    <string name="value">血糖值</string>
    <string name="value_unit">mmol/L</string>
    <string name="value_unit_mg">mg/dl</string>
    <string name="mode1">血液模式</string>
    <string name="mode2">值控模式</string>
    <string name="mode3">电阻试片模式</string>
    <!-- end -->

</resources>