<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/record_details_time_dialog_bg"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <LinearLayout
        android:id="@+id/layout_dialog_record_details_before_breakfast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_dialog_record_details_before_breakfast"
            style="@style/record_details_time_dialog_image" />

        <TextView
            android:id="@+id/txt_dialog_record_details_before_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_details_time_before_breakfast"
            android:textColor="@color/Black"
            android:textSize="20sp" />
    </LinearLayout>

    <View style="@style/line_record_details_horizontal" />

    <LinearLayout
        android:id="@+id/layout_dialog_record_details_after_breakfast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_dialog_record_details_after_breakfast"
            style="@style/record_details_time_dialog_image" />

        <TextView
            android:id="@+id/txt_dialog_record_details_after_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_details_time_after_breakfast"
            android:textColor="@color/Black"
            android:textSize="20sp" />
    </LinearLayout>

    <View style="@style/line_record_details_horizontal" />

    <LinearLayout
        android:id="@+id/layout_dialog_record_details_before_lunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_dialog_record_details_before_lunch"
            style="@style/record_details_time_dialog_image" />

        <TextView
            android:id="@+id/txt_dialog_record_details_before_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_details_time_before_lunch"
            android:textColor="@color/Black"
            android:textSize="20sp" />
    </LinearLayout>

    <View style="@style/line_record_details_horizontal" />

    <LinearLayout
        android:id="@+id/layout_dialog_record_details_after_lunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_dialog_record_details_after_lunch"
            style="@style/record_details_time_dialog_image" />

        <TextView
            android:id="@+id/txt_dialog_record_details_after_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_details_time_after_lunch"
            android:textColor="@color/Black"
            android:textSize="20sp" />
    </LinearLayout>

    <View style="@style/line_record_details_horizontal" />

    <LinearLayout
        android:id="@+id/layout_dialog_record_details_before_dinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_dialog_record_details_before_dinner"
            style="@style/record_details_time_dialog_image" />

        <TextView
            android:id="@+id/txt_dialog_record_details_before_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_details_time_before_dinner"
            android:textColor="@color/Black"
            android:textSize="20sp" />
    </LinearLayout>

    <View style="@style/line_record_details_horizontal" />

    <LinearLayout
        android:id="@+id/layout_dialog_record_details_after_dinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_dialog_record_details_after_dinner"
            style="@style/record_details_time_dialog_image" />

        <TextView
            android:id="@+id/txt_dialog_record_details_after_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_details_time_after_dinner"
            android:textColor="@color/Black"
            android:textSize="20sp" />
    </LinearLayout>

    <View style="@style/line_record_details_horizontal" />

    <LinearLayout
        android:id="@+id/layout_dialog_record_details_before_sleep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_dialog_record_details_before_sleep"
            style="@style/record_details_time_dialog_image" />

        <TextView
            android:id="@+id/txt_dialog_record_details_before_sleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_details_time_before_sleep"
            android:textColor="@color/Black"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>