<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_color" >

        <ImageView
            android:id="@+id/arrow_return"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:src="@drawable/arrow_return"
            android:visibility="visible" />

        <TextView
            android:id="@+id/title_text"
            style="@style/title_text_font"
            android:text="@string/record_details_title" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_details_value_status"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_record_details_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_record_details_result_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_details_value_status_normal"
            android:textSize="15sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <View style="@style/line_record_details_horizontal" />

            <LinearLayout
                android:id="@+id/layout_record_details_reason1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal" >

                <include
                    android:id="@+id/include_record_details_reason1"
                    layout="@layout/include_record_details_reason1" />

                <View style="@style/line_record_details_vertical" />

                <include
                    android:id="@+id/include_record_details_reason2"
                    layout="@layout/include_record_details_reason2" />

                <View style="@style/line_record_details_vertical" />

                <include
                    android:id="@+id/include_record_details_reason3"
                    layout="@layout/include_record_details_reason3" />
            </LinearLayout>

            <View style="@style/line_record_details_horizontal" />

            <LinearLayout
                android:id="@+id/layout_record_details_reason2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal" >

                <include
                    android:id="@+id/include_record_details_reason4"
                    layout="@layout/include_record_details_reason4" />

                <View style="@style/line_record_details_vertical" />

                <include
                    android:id="@+id/include_record_details_reason5"
                    layout="@layout/include_record_details_reason5" />

                <View style="@style/line_record_details_vertical" />

                <include
                    android:id="@+id/include_record_details_reason6"
                    layout="@layout/include_record_details_reason6" />
            </LinearLayout>

            <View style="@style/line_record_details_horizontal" />

            <EditText
                android:id="@+id/edt_record_details_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/record_details_other_reason"
                android:gravity="top"
                android:hint="@string/record_details_input_reason"
                android:minHeight="150dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_record_details_normal_layout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/layout_record_details_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/record_details_time_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/img_record_details_time_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/record_details_time" />

                <TextView
                    android:id="@+id/txt_record_details_time_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/record_details_time_hint" />

                <TextView
                    android:id="@+id/txt_record_details_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/record_details_time_before_lunch"
                    android:textColor="@color/remind_blue" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_record_details_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/record_details_btn_save"
                android:enabled="false"
                android:text="@string/record_details_save" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>